# livelog

backend/: pyproject.toml
backend/app/: alembic.ini  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/endpoints/: events.py
backend/app/api/routes/: actor.py  actors.py  events.py  expenses.py  link.py
backend/app/core/: config.py  db.py
backend/app/migration/: env.py
backend/app/migration/versions/: 24a095681702_add_expenses_relation.py  38d25f8c70ac_revice_linkmodel.py  49c6e10c1c89_add_expenses_relation.py  5524ac05b751_init_db.py  8693b23c56b1_revice_linkmodel.py  c0b1619c7e24_revice_linkmodel.py  ce2c923f7e79_revice_linkmodel.py
backend/app/models/: actor.py  event.py  expense.py  generic.py  link.py  models.py
backend/app/schemas/: events.py  models.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.jsx  page.tsx
frontend/src/components/: ActorSelectModal.jsx  Button.jsx  Calendar.tsx  CalendarArea.jsx  DashBoardArea.jsx  DeleteEvent.jsx  DetailCard.jsx  DetailEventActor.jsx  DetailEventArea.jsx  EditExpense.jsx  EventCard.jsx  EventDetailPage.jsx  EventFormModal.jsx  EventListItem.jsx  EventRegisterForm.jsx  EventsArea.jsx  EventsSearch.jsx  ExpenseArea.jsx  ExpenseOptionMenu.jsx  Filter.jsx  Header.jsx  Header.tsx  InputEventActors.jsx  Pagination.jsx  PopOver.jsx  RegisterEvent.jsx  RegisterExpense.jsx  SearchBar.jsx  SearchResultItems.jsx  SubmitButton.jsx  ThisMonthExpenses.jsx  ThisMonthParticipation.jsx  ThisYearExpenses.jsx  ThisYearParticipation.jsx
(+36 files in other folders)
