[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["yusei <matsu.yusei3414@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
pydantic = "^2.10.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
