[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["yusei <matsu.yusei3414@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlmodel = ">=0.0.21,<1.0.0"
email-validator = "^2.2.0"
psycopg2 = "^2.9.10"
pydantic = "<2.0"
alembic = "^1.15.1"
pycycle = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
